# btcpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cuda/: CMakeLists.txt
cuda/include/: cmine.hpp  cuda_sha256.hpp  mine.cuh  mining.cuh  sha256.cuh
cuda/src/: mine.cu  mining.cu  sha256.cu
cuda_include/: mining.cuh
files/: blockchain.json  transactions.json
include/: block.hpp  blockchain.hpp  cli.hpp  factory.hpp  hash.hpp  header.hpp  json.hpp  merkle_tree.hpp  miner.hpp  mining.cuh  transaction.hpp
src/: CMakeLists.txt  block.cpp  blockchain.cpp  cli.cpp  header.cpp  main.cpp  merkle_tree.cpp  miner.cpp  mining.cu  test.cpp  transaction.cpp
